--- a/app/src/main/res/layout/fragment_recipe_ingredients.xml
+++ b/app/src/main/res/layout/fragment_recipe_ingredients.xml
@@ -31,7 +31,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:layout_marginBottom="20dp"
                     android:text="@string/count_portion"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="@id/constrained_layout"
@@ -39,7 +38,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageButton
-                    android:id="@+id/minus"
+                    android:id="@+id/btn_minus"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
@@ -56,11 +55,11 @@
                     android:layout_margin="5dp"
                     android:inputType="numberDecimal"
                     app:layout_constraintBottom_toBottomOf="@id/constrained_layout"
-                    app:layout_constraintEnd_toStartOf="@id/plus"
+                    app:layout_constraintEnd_toStartOf="@id/btn_plus"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageButton
-                    android:id="@+id/plus"
+                    android:id="@+id/btn_plus"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="20dp"
@@ -77,13 +76,13 @@
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toTopOf="@id/addToCart"
+                app:layout_constraintBottom_toTopOf="@id/btn_add_to_cart"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/constrained_layout"
                 tools:listitem="@layout/view_ingredient_show" />
 
             <Button
-                android:id="@+id/addToCart"
+                android:id="@+id/btn_add_to_cart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:enabled="false"
