--- a/app/src/main/res/menu/menu_main_activity.xml
+++ b/app/src/main/res/menu/menu_main_activity.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/correct_recipe"
-        android:icon="@drawable/ic_baseline_create_24"
-        android:title="Редактировать" />
-    <item
-        android:id="@+id/delete_recipe"
-        android:icon="@drawable/ic_baseline_delete_24"
-        android:title="Удалить" />
+        android:id="@+id/cart"
+        android:icon="@drawable/ic_baseline_shopping_cart_24"
+        android:title="@string/cart"
+        app:showAsAction="always" />
 </menu>
